add fota function
Change-Id: I8f0124e3c1ab7dd09ab73f1b16d0e5c3b68e3490

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -840,7 +840,11 @@ DOMInterfaces = {
 'MozMobileConnection': {
     'nativeType': 'mozilla::dom::MobileConnection',
 },
-
+#Bug:597107 Added by baijian 2014-02-09 webIdl Bindings begin
+'MozJrdFotaManager': {
+   'nativeType': 'mozilla::dom::jrdfota::MozJrdFotaManager',
+},
+#Bug:597107 Added by baijian 2014-02-09 webIdl Bindings end
 'MozMobileConnectionArray': {
     'nativeType': 'mozilla::dom::MobileConnectionArray',
     'resultNotAddRefed': [ 'item' ]
